--- a/sass/app.scss
+++ b/sass/app.scss
@@ -59,11 +59,10 @@
 html,body {
 	background:#e5e5e5;
 }
-//fonts
-.badge-thumbs .content {
+.square.grid .content {
 	font-size:0.85em;
 }
-.badge-thumbs .detail {
+.square.grid .detail {
 	padding:0.625em;
 }
 .badgeui > ul > li > a.badge_action {
@@ -85,6 +84,16 @@ margin-right:1.25em;
 }
 .badgeui .f-dropdown > li hr {
 	margin:0.625em 0;
+}
+.badgeui .submenu li:hover a {
+	background-color:#fff;
+}
+.badgeui .f-dropdown {
+	padding-top:0.625em;
+	padding-bottom:0.625em;
+}
+.badgeui input {
+	max-width:175px;
 }
 #badge_modal {
 	display:none;
@@ -129,25 +138,22 @@ margin-right:1.25em;
 span.title {
 	font-size:1.1em;
 }
-.badge-thumbs.square {
+.square.grid {
 	position:relative;
 }
-.badge-thumbs.square > li {
+.square.grid > li {
 	position:relative;
 }
-.badge-thumbs.square > li > a {
+.square.grid > li > a {
 	position:relative;
 	display:block;
 	width:100%;
 	height:200px;
-	//@include background-image(linear-gradient(top,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 100%));
 	background-color:#fff;
 	border-radius:2px;
 	overflow:hidden;
-	background-position:center center;
-	background-repeat:no-repeat;
 }
-.badge-thumbs.square > li > a > span.detail {
+.square.grid > li > a > span.detail {
 	display:block;
 	position:absolute;
 	top:160px;
@@ -157,13 +163,48 @@ span.title {
 	background-image:url('../img/gd/90pw.png');
 	background-repeat:repeat;
 }
-.badge-thumbs.square > li > a > span.detail > span {
+.badge-thumbs.square.grid > li > a {
+	background-position:center center;
+	background-repeat:no-repeat;
+}
+.collection-thumbs.square.grid .minithumbs {
+	position:relative;
+	display:block;
+	max-width:125px;
+	margin:auto;
+	margin-top:1.25em;
+}
+.collection-thumbs.square.grid .minithumb {
+	position:absolute;
+	width:75px;
+	height:75px;
+	border:1px solid #c0c0c0;
+	border-radius:2px;
+	background-repeat:no-repeat;
+	background-position:center center;
+	background-color:#fff;
+	-webkit-box-shadow: 0px 0px 14px rgba(50, 50, 50, 0.5);
+	-moz-box-shadow:    0px 0px 14px rgba(50, 50, 50, 0.5);
+	box-shadow:         0px 0px 14px rgba(50, 50, 50, 0.5);
+}
+.collection-thumbs.square.grid .minithumb-1 {
+	top:0px;
+	left:0px;
+}
+.collection-thumbs.square.grid .minithumb-2 {
+	top:25px;
+	left:50px;
+}
+.collection-thumbs.square.grid .minithumb-3 { 
+	top:50px;
+	left:25px;
+}
+.square.grid > li > a > span.detail > span {
 	display:block;
 }
 .badge-thumbs .badgeui {
 	display:none;
 	position:absolute;
-	//top:200px;
 	bottom:13px;
 	left:0;
 	width:100%;
