collection ui begin

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -65,34 +65,34 @@ html,body {
 .square.grid .detail {
 	padding:0.625em;
 }
-.badgeui > ul > li > a.badge_action {
+.ui > ul > li > a.badge_action {
 	background-image:url('../img/sprite.png');
 	background-repeat:no-repeat;
 }
-.badgeui {
+.ui {
 	z-index:2;
 }
-.badgeui li {
+.ui li {
 	list-style-type:none;
 }
-.badgeui .f-dropdown > li > a.brfc {
+.ui .f-dropdown > li > a.brfc {
 float:left;
 margin-right:1.25em;
 }
-.badgeui .f-dropdown > li > a:hover {
+.ui .f-dropdown > li > a:hover {
 	text-decoration:underline;
 }
-.badgeui .f-dropdown > li hr {
+.ui .f-dropdown > li hr {
 	margin:0.625em 0;
 }
-.badgeui .submenu li:hover a {
+.ui .submenu li:hover a {
 	background-color:#fff;
 }
-.badgeui .f-dropdown {
+.ui .f-dropdown {
 	padding-top:0.625em;
 	padding-bottom:0.625em;
 }
-.badgeui input {
+.ui input {
 	max-width:175px;
 }
 #badge_modal {
@@ -163,7 +163,7 @@ span.title {
 	background-image:url('../img/gd/90pw.png');
 	background-repeat:repeat;
 }
-.badge-thumbs.square.grid > li > a {
+.square.grid > li > a {
 	background-position:center center;
 	background-repeat:no-repeat;
 }
@@ -202,7 +202,7 @@ span.title {
 .square.grid > li > a > span.detail > span {
 	display:block;
 }
-.badge-thumbs .badgeui {
+.square.grid .ui {
 	display:none;
 	position:absolute;
 	bottom:13px;
@@ -210,7 +210,7 @@ span.title {
 	width:100%;
 	padding:0 0.625em;
 }
-.badge-thumbs .badgeui > ul {
+.square.grid .ui > ul {
 	margin-left:0px;
 	display:inline-block;
 	width:100%;
@@ -221,28 +221,33 @@ span.title {
 	border-top:1px solid #e5e5e5;
 	margin-top:-1px;
 }
-.badge-thumbs .badgeui > ul > li {
-	width:33%;
+.square.grid .ui > ul > li {
 	margin-left:0px;
 	float:left;
 }
-.badge-thumbs .badgeui > ul > li > a {
+.square.grid .ui > ul > li > a {
 	display:block;
 	width:100%;
 	height:40px;
 	text-indent:-9000px;
 }
-
-.badge-thumbs .badge_action.bdel {
+.square.grid .ui > ul > li {
+	width:33%;
+}
+.badge-thumbs .badge_action.bdel,
+.collection-thumbs .collection_action.cdel {
 	background-position:center -3px;
 }
 .badge-thumbs .badge_action.bcol {
 	background-position:center -271px;
 }
-.badge-thumbs .badge_action.bdet {
+.badge-thumbs .badge_action.bdet,
+.collection-thumbs .collection_action.cdet {
 	background-position:center -204px;
 }
-
+.collection-thumbs .collection_action.csha {
+	background-position:center -137px;
+}
 .collections .badge-thumbs {
 	margin-left:0px;
 }
@@ -265,7 +270,7 @@ span.title {
 	display:block;
 }
 
-.badge-thumbs.vertical .badgeui {
+.badge-thumbs.vertical .ui {
 	width:inherit;
 	position:absolute;
 	left:inherit;
@@ -274,7 +279,7 @@ span.title {
 	width:100%;
 	padding-left:70px;
 }
-.badge-thumbs.vertical .badgeui > ul {
+.badge-thumbs.vertical .ui > ul {
 	border-radius:5px;
 	border:1px solid #e5e5e5;
 }
@@ -284,12 +289,14 @@ span.title {
 .fullbadge p {
 	line-height:1.25em;
 }
+.collection_action {
+	background-repeat:no-repeat;
+	background-image:url("../img/sprite.png");	
+}
 .collections .collection_action {
 	height:40px;
-	background-image:url("../img/sprite.png");
 	display:block;
 	float:left;
-	background-repeat:no-repeat;
 	text-indent:-9000px;
 	width:30px;
 }
@@ -299,6 +306,5 @@ span.title {
 .collections .collection_action.csha {
 	background-position:0px -134px;
 }
-
 
 // end backpack v2//
