--- a/sass/app.scss
+++ b/sass/app.scss
@@ -210,7 +210,7 @@ span.title {
 	width:100%;
 	padding:0 0.625em;
 }
-.square.grid .ui > ul {
+.grid .ui > ul {
 	margin-left:0px;
 	display:inline-block;
 	width:100%;
@@ -221,17 +221,17 @@ span.title {
 	border-top:1px solid #e5e5e5;
 	margin-top:-1px;
 }
-.square.grid .ui > ul > li {
+.grid .ui > ul > li {
 	margin-left:0px;
 	float:left;
 }
-.square.grid .ui > ul > li > a {
+.grid .ui > ul > li > a {
 	display:block;
 	width:100%;
 	height:40px;
 	text-indent:-9000px;
 }
-.square.grid .ui > ul > li {
+.grid .ui > ul > li {
 	width:33%;
 }
 .badge-thumbs .badge_action.bdel,
@@ -264,7 +264,7 @@ span.title {
 	min-height:90px;
 }
 .badge-thumbs.vertical > li > a > span {
-	margin-left:65px;
+	margin-left:75px;
 }
 .badge-thumbs.vertical > li > a span {
 	display:block;
@@ -278,10 +278,17 @@ span.title {
 	right:0px;
 	width:100%;
 	padding-left:70px;
+	padding-right:0.625em;
 }
 .badge-thumbs.vertical .ui > ul {
 	border-radius:5px;
 	border:1px solid #e5e5e5;
+}
+.badge-thumbs.vertical .detail {
+	margin-top:0.625em;
+}
+.badge-thumbs.vertical > li > a > .detail > .title {
+	line-height:2;
 }
 .fullbadge img {
 	float:right;
