--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7430,7 +7430,7 @@ span.title {
 }
 
 /* line 213, ../sass/app.scss */
-.square.grid .ui > ul {
+.grid .ui > ul {
   margin-left: 0px;
   display: inline-block;
   width: 100%;
@@ -7443,13 +7443,13 @@ span.title {
 }
 
 /* line 224, ../sass/app.scss */
-.square.grid .ui > ul > li {
+.grid .ui > ul > li {
   margin-left: 0px;
   float: left;
 }
 
 /* line 228, ../sass/app.scss */
-.square.grid .ui > ul > li > a {
+.grid .ui > ul > li > a {
   display: block;
   width: 100%;
   height: 40px;
@@ -7457,7 +7457,7 @@ span.title {
 }
 
 /* line 234, ../sass/app.scss */
-.square.grid .ui > ul > li {
+.grid .ui > ul > li {
   width: 33%;
 }
 
@@ -7506,7 +7506,7 @@ span.title {
 
 /* line 266, ../sass/app.scss */
 .badge-thumbs.vertical > li > a > span {
-  margin-left: 65px;
+  margin-left: 75px;
 }
 
 /* line 269, ../sass/app.scss */
@@ -7523,31 +7523,42 @@ span.title {
   right: 0px;
   width: 100%;
   padding-left: 70px;
+  padding-right: 0.625em;
 }
 
-/* line 282, ../sass/app.scss */
+/* line 283, ../sass/app.scss */
 .badge-thumbs.vertical .ui > ul {
   border-radius: 5px;
   border: 1px solid #e5e5e5;
 }
 
-/* line 286, ../sass/app.scss */
+/* line 287, ../sass/app.scss */
+.badge-thumbs.vertical .detail {
+  margin-top: 0.625em;
+}
+
+/* line 290, ../sass/app.scss */
+.badge-thumbs.vertical > li > a > .detail > .title {
+  line-height: 2;
+}
+
+/* line 293, ../sass/app.scss */
 .fullbadge img {
   float: right;
 }
 
-/* line 289, ../sass/app.scss */
+/* line 296, ../sass/app.scss */
 .fullbadge p {
   line-height: 1.25em;
 }
 
-/* line 292, ../sass/app.scss */
+/* line 299, ../sass/app.scss */
 .collection_action {
   background-repeat: no-repeat;
   background-image: url("../img/sprite.png");
 }
 
-/* line 296, ../sass/app.scss */
+/* line 303, ../sass/app.scss */
 .collections .collection_action {
   height: 40px;
   display: block;
@@ -7556,12 +7567,12 @@ span.title {
   width: 30px;
 }
 
-/* line 303, ../sass/app.scss */
+/* line 310, ../sass/app.scss */
 .collections .collection_action.cdel {
   background-position: -1px 0px;
 }
 
-/* line 306, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .collections .collection_action.csha {
   background-position: 0px -134px;
 }
