--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7218,75 +7218,75 @@ a.th {
   max-width: 800px;
 }
 
-/* line 59, ../sass/app.scss */
+/* line 61, ../sass/app.scss */
 html, body {
   background: #e5e5e5;
 }
 
-/* line 62, ../sass/app.scss */
+/* line 64, ../sass/app.scss */
 .square.grid .content {
   font-size: 0.85em;
 }
 
-/* line 65, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .square.grid .detail {
   padding: 0.625em;
 }
 
-/* line 68, ../sass/app.scss */
+/* line 70, ../sass/app.scss */
 .ui > ul > li > a.badge_action {
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
 }
 
-/* line 72, ../sass/app.scss */
+/* line 74, ../sass/app.scss */
 .ui {
   z-index: 2;
 }
 
-/* line 75, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
 .ui li {
   list-style-type: none;
 }
 
-/* line 78, ../sass/app.scss */
+/* line 80, ../sass/app.scss */
 .ui .f-dropdown > li > a.brfc {
   float: left;
   margin-right: 1.25em;
 }
 
-/* line 82, ../sass/app.scss */
+/* line 84, ../sass/app.scss */
 .ui .f-dropdown > li > a:hover {
   text-decoration: underline;
 }
 
-/* line 85, ../sass/app.scss */
+/* line 87, ../sass/app.scss */
 .ui .f-dropdown > li hr {
   margin: 0.625em 0;
 }
 
-/* line 88, ../sass/app.scss */
+/* line 90, ../sass/app.scss */
 .ui .submenu li:hover a {
   background-color: #fff;
 }
 
-/* line 91, ../sass/app.scss */
+/* line 93, ../sass/app.scss */
 .ui .f-dropdown {
   padding-top: 0.625em;
   padding-bottom: 0.625em;
 }
 
-/* line 95, ../sass/app.scss */
+/* line 97, ../sass/app.scss */
 .ui input {
   max-width: 175px;
 }
 
-/* line 98, ../sass/app.scss */
+/* line 100, ../sass/app.scss */
 #badge_modal {
   display: none;
 }
 
-/* line 102, ../sass/app.scss */
+/* line 104, ../sass/app.scss */
 #badge_modal_inner {
   position: absolute;
   z-index: 3;
@@ -7298,7 +7298,7 @@ html, body {
   padding: 1.25em;
 }
 
-/* line 112, ../sass/app.scss */
+/* line 114, ../sass/app.scss */
 #badge_modal_inner .close {
   position: absolute;
   top: 0;
@@ -7306,7 +7306,7 @@ html, body {
   padding: 1.25em;
 }
 
-/* line 118, ../sass/app.scss */
+/* line 120, ../sass/app.scss */
 .alert-box {
   position: fixed;
   top: 0;
@@ -7316,34 +7316,34 @@ html, body {
   display: none;
 }
 
-/* line 127, ../sass/app.scss */
+/* line 129, ../sass/app.scss */
 .top-bar,
 .top-bar-section li a:not(.button) {
   background: #182d39;
 }
 
-/* line 130, ../sass/app.scss */
+/* line 132, ../sass/app.scss */
 .top-bar-section > ul > .divider, .top-bar-section > ul > [role="separator"] {
   border-left-color: #182d39;
   border-right-color: #2e4958;
 }
 
-/* line 138, ../sass/app.scss */
+/* line 140, ../sass/app.scss */
 span.title {
   font-size: 1.1em;
 }
 
-/* line 141, ../sass/app.scss */
+/* line 143, ../sass/app.scss */
 .square.grid {
   position: relative;
 }
 
-/* line 144, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 .square.grid > li {
   position: relative;
 }
 
-/* line 147, ../sass/app.scss */
+/* line 149, ../sass/app.scss */
 .square.grid > li > a {
   position: relative;
   display: block;
@@ -7354,7 +7354,7 @@ span.title {
   overflow: hidden;
 }
 
-/* line 156, ../sass/app.scss */
+/* line 158, ../sass/app.scss */
 .square.grid > li > a > span.detail {
   display: block;
   position: absolute;
@@ -7366,13 +7366,13 @@ span.title {
   background-repeat: repeat;
 }
 
-/* line 166, ../sass/app.scss */
+/* line 168, ../sass/app.scss */
 .square.grid > li > a {
   background-position: center center;
   background-repeat: no-repeat;
 }
 
-/* line 170, ../sass/app.scss */
+/* line 172, ../sass/app.scss */
 .collection-thumbs.square.grid .minithumbs {
   position: relative;
   display: block;
@@ -7381,7 +7381,7 @@ span.title {
   margin-top: 1.25em;
 }
 
-/* line 177, ../sass/app.scss */
+/* line 179, ../sass/app.scss */
 .collection-thumbs.square.grid .minithumb {
   position: absolute;
   width: 75px;
@@ -7396,30 +7396,30 @@ span.title {
   box-shadow: 0px 0px 14px rgba(50, 50, 50, 0.5);
 }
 
-/* line 190, ../sass/app.scss */
+/* line 192, ../sass/app.scss */
 .collection-thumbs.square.grid .minithumb-1 {
   top: 0px;
   left: 0px;
 }
 
-/* line 194, ../sass/app.scss */
+/* line 196, ../sass/app.scss */
 .collection-thumbs.square.grid .minithumb-2 {
   top: 25px;
   left: 50px;
 }
 
-/* line 198, ../sass/app.scss */
+/* line 200, ../sass/app.scss */
 .collection-thumbs.square.grid .minithumb-3 {
   top: 50px;
   left: 25px;
 }
 
-/* line 202, ../sass/app.scss */
+/* line 204, ../sass/app.scss */
 .square.grid > li > a > span.detail > span {
   display: block;
 }
 
-/* line 205, ../sass/app.scss */
+/* line 207, ../sass/app.scss */
 .square.grid .ui {
   display: none;
   position: absolute;
@@ -7429,7 +7429,7 @@ span.title {
   padding: 0 0.625em;
 }
 
-/* line 213, ../sass/app.scss */
+/* line 215, ../sass/app.scss */
 .grid .ui > ul {
   margin-left: 0px;
   display: inline-block;
@@ -7442,13 +7442,13 @@ span.title {
   margin-top: -1px;
 }
 
-/* line 224, ../sass/app.scss */
+/* line 226, ../sass/app.scss */
 .grid .ui > ul > li {
   margin-left: 0px;
   float: left;
 }
 
-/* line 228, ../sass/app.scss */
+/* line 230, ../sass/app.scss */
 .grid .ui > ul > li > a {
   display: block;
   width: 100%;
@@ -7456,46 +7456,46 @@ span.title {
   text-indent: -9000px;
 }
 
-/* line 234, ../sass/app.scss */
+/* line 236, ../sass/app.scss */
 .grid .ui > ul > li {
   width: 33%;
 }
 
-/* line 238, ../sass/app.scss */
+/* line 240, ../sass/app.scss */
 .badge-thumbs .badge_action.bdel,
 .collection-thumbs .collection_action.cdel {
   background-position: center -3px;
 }
 
-/* line 241, ../sass/app.scss */
+/* line 243, ../sass/app.scss */
 .badge-thumbs .badge_action.bcol {
   background-position: center -271px;
 }
 
-/* line 245, ../sass/app.scss */
+/* line 247, ../sass/app.scss */
 .badge-thumbs .badge_action.bdet,
 .collection-thumbs .collection_action.cdet {
   background-position: center -204px;
 }
 
-/* line 248, ../sass/app.scss */
+/* line 250, ../sass/app.scss */
 .collection-thumbs .collection_action.csha {
   background-position: center -137px;
 }
 
-/* line 251, ../sass/app.scss */
+/* line 253, ../sass/app.scss */
 .collections .badge-thumbs {
   margin-left: 0px;
 }
 
-/* line 254, ../sass/app.scss */
+/* line 256, ../sass/app.scss */
 .badge-thumbs.vertical > li {
   list-style-type: none;
   margin-bottom: 0.625em;
   position: relative;
 }
 
-/* line 259, ../sass/app.scss */
+/* line 261, ../sass/app.scss */
 .badge-thumbs.vertical > li > a {
   background-position: 12px center;
   background-repeat: no-repeat;
@@ -7504,17 +7504,17 @@ span.title {
   min-height: 90px;
 }
 
-/* line 266, ../sass/app.scss */
+/* line 268, ../sass/app.scss */
 .badge-thumbs.vertical > li > a > span {
   margin-left: 75px;
 }
 
-/* line 269, ../sass/app.scss */
+/* line 271, ../sass/app.scss */
 .badge-thumbs.vertical > li > a span {
   display: block;
 }
 
-/* line 273, ../sass/app.scss */
+/* line 275, ../sass/app.scss */
 .badge-thumbs.vertical .ui {
   width: inherit;
   position: absolute;
@@ -7526,39 +7526,39 @@ span.title {
   padding-right: 0.625em;
 }
 
-/* line 283, ../sass/app.scss */
+/* line 285, ../sass/app.scss */
 .badge-thumbs.vertical .ui > ul {
   border-radius: 5px;
   border: 1px solid #e5e5e5;
 }
 
-/* line 287, ../sass/app.scss */
+/* line 289, ../sass/app.scss */
 .badge-thumbs.vertical .detail {
   margin-top: 0.625em;
 }
 
-/* line 290, ../sass/app.scss */
+/* line 292, ../sass/app.scss */
 .badge-thumbs.vertical > li > a > .detail > .title {
   line-height: 2;
 }
 
-/* line 293, ../sass/app.scss */
+/* line 295, ../sass/app.scss */
 .fullbadge img {
   float: right;
 }
 
-/* line 296, ../sass/app.scss */
+/* line 298, ../sass/app.scss */
 .fullbadge p {
   line-height: 1.25em;
 }
 
-/* line 299, ../sass/app.scss */
+/* line 301, ../sass/app.scss */
 .collection_action {
   background-repeat: no-repeat;
   background-image: url("../img/sprite.png");
 }
 
-/* line 303, ../sass/app.scss */
+/* line 305, ../sass/app.scss */
 .collections .collection_action {
   height: 40px;
   display: block;
@@ -7567,12 +7567,33 @@ span.title {
   width: 30px;
 }
 
-/* line 310, ../sass/app.scss */
+/* line 312, ../sass/app.scss */
 .collections .collection_action.cdel {
   background-position: -1px 0px;
 }
 
-/* line 313, ../sass/app.scss */
+/* line 315, ../sass/app.scss */
 .collections .collection_action.csha {
   background-position: 0px -134px;
+}
+
+/* line 325, ../sass/app.scss */
+.issuer .badge-thumbs.vertical > li {
+  margin-bottom: 0.625em;
+  padding-bottom: 0px;
+}
+
+/* line 329, ../sass/app.scss */
+.issuer .badge-thumbs.vertical > li > a {
+  float: left;
+  width: 90%;
+}
+
+/* line 333, ../sass/app.scss */
+.issuer .badge-thumbs.vertical > li > span {
+  float: right;
+  display: block;
+  width: 10%;
+  background-color: #fff;
+  min-height: 90px;
 }
