--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -86,7 +86,7 @@ $default-float: left;
 // Control whether or not CSS classes come through in the CSS files.
 
 // $include-html-classes: true;
-// $include-print-styles: true;
+ $include-print-styles: false;
 // $include-html-global-classes: $include-html-classes;
 // $include-html-inline-list-classes: $include-html-classes;
 // $include-html-type-classes: $include-html-classes;
