padding on vertical grid

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -271,6 +271,7 @@ span.title {
 .badge-thumbs.vertical > li > .badgethumb > span {
 	margin-left:75px;
 	padding-top:0.625em;
+	padding-bottom:0.625em;
 }
 .badge-thumbs.vertical > li > .badgethumb span {
 	display:block;
